force-app/main/default/objects/Account/fields/DadosPJ_InscricaoMunicipal__c.field-meta.xml
<CustomField>
    <fullName>DadosPJ_InscricaoMunicipal__c</fullName>
    <description>No caso de contas PJ, esse campo deve armazenar a inscrição municipal da empresa cliente.</description>
    <label>Inscrição Municipal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>