force-app/main/default/objects/Account/fields/Data_da_exclus_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_exclus_o__c</fullName>
    <label>Data da exclusão</label>
    <type>Date</type>
</CustomField>