force-app/main/default/objects/Account/fields/Data_da_Ultima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Ultima_Visita__c</fullName>
    <label>Data da Última Visita</label>
    <type>Date</type>
</CustomField>