force-app/main/default/objects/Account/fields/Data_de_cadastro__c.field-meta.xml
<CustomField>
    <fullName>Data_de_cadastro__c</fullName>
    <label>Data de cadastro</label>
    <type>Date</type>
</CustomField>