force-app/main/default/objects/Account/fields/Data_de_in_cio_da_vig_ncia__c.field-meta.xml
<CustomField>
    <fullName>Data_de_in_cio_da_vig_ncia__c</fullName>
    <label>Data de início da vigência</label>
    <type>Date</type>
</CustomField>