force-app/main/default/objects/Account/fields/Data_do_ltimo_Churn__c.field-meta.xml
<CustomField>
    <fullName>Data_do_ltimo_Churn__c</fullName>
    <description>Data do Último Churn</description>
    <label>Data do Último Churn</label>
    <type>Date</type>
</CustomField>