force-app/main/default/objects/Account/fields/Data_In_cio_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Data_In_cio_de_Contrato__c</fullName>
    <description>Data Início de Contrato</description>
    <label>Data Início de Contrato</label>
    <type>Date</type>
</CustomField>