force-app/main/default/objects/Account/fields/Data_ltima_Compra__c.field-meta.xml
<CustomField>
    <fullName>Data_ltima_Compra__c</fullName>
    <description>Data Última Compra</description>
    <label>Data Última Compra</label>
    <type>Date</type>
</CustomField>