force-app/main/default/objects/Account/fields/Data_prevista_da_troca_dos_pneus__c.field-meta.xml
<CustomField>
    <fullName>Data_prevista_da_troca_dos_pneus__c</fullName>
    <label>Data prevista da troca dos pneus</label>
    <type>Date</type>
</CustomField>