force-app/main/default/objects/Account/fields/Data_ultima_oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Data_ultima_oportunidade__c</fullName>
    <description>Data da última oportunidade</description>
    <label>Data da última oportunidade</label>
    <summarizedField>Opportunity.LastModifiedDate</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>