force-app/main/default/objects/Account/fields/Data_ultima_visita__c.field-meta.xml
<CustomField>
    <fullName>Data_ultima_visita__c</fullName>
    <description>Data da última visita do cliente</description>
    <inlineHelpText>Data da última visita do cliente</inlineHelpText>
    <label>Data da última visita</label>
    <type>DateTime</type>
</CustomField>