force-app/main/default/objects/Account/fields/DebAut_Agencia__c.field-meta.xml
<CustomField>
    <fullName>DebAut_Agencia__c</fullName>
    <label>Agencia</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>