force-app/main/default/objects/Account/fields/DebAut_ContaCorrente__c.field-meta.xml
<CustomField>
    <fullName>DebAut_ContaCorrente__c</fullName>
    <label>Conta</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>