force-app/main/default/objects/Account/fields/DebAut_NomeTitular__c.field-meta.xml
<CustomField>
    <fullName>DebAut_NomeTitular__c</fullName>
    <label>Nome do titular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>