force-app/main/default/objects/Account/fields/Dia_de_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Dia_de_vencimento__c</fullName>
    <description>Campo dependente da forma de pagamento.</description>
    <inlineHelpText>Selecione o dia de vencimento para o monitoramento.</inlineHelpText>
    <label>Dia de vencimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FormaCobranca__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>