force-app/main/default/objects/Account/fields/Dias_em_Atraso__c.field-meta.xml
<CustomField>
    <fullName>Dias_em_Atraso__c</fullName>
    <description>Dias em Atraso</description>
    <label>Dias em Atraso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>