force-app/main/default/objects/Account/fields/E_mail_contato_comercial__c.field-meta.xml
<CustomField>
    <fullName>E_mail_contato_comercial__c</fullName>
    <label>E-mail contato comercial</label>
    <type>Email</type>
</CustomField>