force-app/main/default/objects/Account/fields/EMail__c.field-meta.xml
<CustomField>
    <fullName>EMail__c</fullName>
    <description>Endereço de e-mail para contato com o cliente.</description>
    <inlineHelpText>Para contas do Tipo Pessoa Física, especifique o endereço de e-mail no qual o cliente pode ser encontrado. Para contas do Tipo Pesoal Jurídica, especifique o e-mail de contato comercial da empresa.</inlineHelpText>
    <label>EMail</label>
    <type>Email</type>
</CustomField>