force-app/main/default/objects/Account/fields/Email_contato_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Email_contato_autorizado__c</fullName>
    <label>Email contato autorizado</label>
    <type>Email</type>
</CustomField>