force-app/main/default/objects/Account/fields/Email_contato_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Email_contato_emergencia__c</fullName>
    <label>Email contato emergência</label>
    <type>Email</type>
</CustomField>