force-app/main/default/objects/Account/fields/Email_contato_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Email_contato_instalacao__c</fullName>
    <label>Email contato instalação</label>
    <type>Email</type>
</CustomField>