force-app/main/default/objects/Account/fields/Email_informado_o_mesmo_do_cadastro__c.field-meta.xml
<CustomField>
    <fullName>Email_informado_o_mesmo_do_cadastro__c</fullName>
    <description>Campo de pesquisa para confirmação do recebimento do boleto de instalação</description>
    <inlineHelpText>Confirmar se o email do cliente é o mesmo que consta em seu cadastro</inlineHelpText>
    <label>Email informado é o mesmo do cadastro?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>