force-app/main/default/objects/Account/fields/EMailNFE__c.field-meta.xml
<CustomField>
    <fullName>EMailNFE__c</fullName>
    <label>EMailNFE</label>
    <type>Email</type>
</CustomField>