force-app/main/default/objects/Account/fields/Embarcadores__c.field-meta.xml
<CustomField>
    <fullName>Embarcadores__c</fullName>
    <label>Embarcadores</label>
    <type>TextArea</type>
</CustomField>