force-app/main/default/objects/Account/fields/Enderecos_Cobranca_CEP__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Cobranca_CEP__c</fullName>
    <label>CEP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>