force-app/main/default/objects/Account/fields/Enderecos_Cobranca_Complemento__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Cobranca_Complemento__c</fullName>
    <label>Complemento</label>
    <length>150</length>
    <type>Text</type>
</CustomField>