force-app/main/default/objects/Account/fields/Enderecos_Cobranca_Pais__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Cobranca_Pais__c</fullName>
    <label>País</label>
    <length>25</length>
    <type>Text</type>
</CustomField>