force-app/main/default/objects/Account/fields/Enderecos_Cobranca_UsarPrincial__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Cobranca_UsarPrincial__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Usar endereço principal</label>
    <type>Checkbox</type>
</CustomField>