force-app/main/default/objects/Account/fields/Enderecos_Entrega_Bairro__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Entrega_Bairro__c</fullName>
    <label>Bairro</label>
    <length>150</length>
    <type>Text</type>
</CustomField>