force-app/main/default/objects/Account/fields/Enderecos_Entrega_UsarPrincipal__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Entrega_UsarPrincipal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Usar endereço principal</label>
    <type>Checkbox</type>
</CustomField>