force-app/main/default/objects/Account/fields/Enderecos_Principal_Estado__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Principal_Estado__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>