force-app/main/default/objects/Account/fields/Enderecos_Principal_Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Principal_Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>