force-app/main/default/objects/Account/fields/Enderecos_Principal_Numero__c.field-meta.xml
<CustomField>
    <fullName>Enderecos_Principal_Numero__c</fullName>
    <label>Número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>