force-app/main/default/objects/Account/fields/Executivo__c.field-meta.xml
<CustomField>
    <fullName>Executivo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executivo</label>
    <referenceTo>Executivo_de_vendas__c</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>