force-app/main/default/objects/Account/fields/Executivo_de_vendas_new__c.field-meta.xml
<CustomField>
    <fullName>Executivo_de_vendas_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executivo de vendas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>