force-app/main/default/objects/Account/fields/Faixa_oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Faixa_oportunidades__c</fullName>
    <description>Campo utilizado para relatório da Argentina</description>
    <formula>IF(Quantidade_oportunidades__c &gt; 20, &#39;Mayor que 20&#39;, 
 		IF (Quantidade_oportunidades__c &gt; 10, &#39;11 hasta 20&#39;,
 			IF (Quantidade_oportunidades__c &gt; 5, &#39;6 hasta 10&#39;,
 				IF (Quantidade_oportunidades__c &gt; 0, &#39;1 hasta 5&#39;, &#39;0&#39;
 				)
 			)
 		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Faixa de oportunidades</label>
    <type>Text</type>
</CustomField>