force-app/main/default/objects/Account/fields/Fam_lia_de_equipamento__c.field-meta.xml
<CustomField>
    <fullName>Fam_lia_de_equipamento__c</fullName>
    <label>Família de equipamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>