force-app/main/default/objects/Account/fields/Forma_cobranca_ID__c.field-meta.xml
<CustomField>
    <fullName>Forma_cobranca_ID__c</fullName>
    <formula>CASE (TEXT( FormaCobranca__c),
&#39;1-Boleto Bancário&#39;, 1,
&#39;24-Cartão Visa&#39;, 24,
&#39;25-Cartão Mastercard&#39;, 25,
&#39;82-Cartão Hipercard&#39;, 82,
&#39;3-Débito Automático HSBC&#39;, 3,
&#39;4-Débito Automático Itaú&#39;, 4,
&#39;12-Débito Automático Bradesco&#39;, 12,
&#39;13-Débito Automático Banco do Brasil&#39;, 13, 
&#39;81-Débito Automático Santander&#39;, 81,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forma de cobrança ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>