force-app/main/default/objects/Account/fields/FormaCobranca__c.field-meta.xml
<CustomField>
    <fullName>FormaCobranca__c</fullName>
    <inlineHelpText>Especifique a forma como será realizada a cobrança do serviço de monitoramento.</inlineHelpText>
    <label>Forma de Cobrança</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Boleto Bancário</fullName>
            </value>
            <value>
                <fullName>24-Cartão Visa</fullName>
            </value>
            <value>
                <fullName>25-Cartão Mastercard</fullName>
            </value>
            <value>
                <fullName>82-Cartão Hipercard</fullName>
            </value>
            <value>
                <fullName>3-Débito Automático HSBC</fullName>
            </value>
            <value>
                <fullName>4-Débito Automático Itaú</fullName>
            </value>
            <value>
                <fullName>12-Débito Automático Bradesco</fullName>
            </value>
            <value>
                <fullName>13-Débito Automático Banco do Brasil</fullName>
            </value>
            <value>
                <fullName>81-Débito Automático Santander</fullName>
            </value>
            <value>
                <fullName>1- Transferência Bancaria</fullName>
            </value>
            <value>
                <fullName>2 - Débito Automático</fullName>
            </value>
            <value>
                <fullName>3 – Cheque</fullName>
            </value>
            <value>
                <fullName>4 – Pago Fácil</fullName>
            </value>
            <value>
                <fullName>10- Cartãode Crédito Visa</fullName>
            </value>
            <value>
                <fullName>11- Cartão de Crédito American Express</fullName>
            </value>
            <value>
                <fullName>12- Cartão de Crédito MasterCard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>