force-app/main/default/objects/Account/fields/Formato_de_comissionamento__c.field-meta.xml
<CustomField>
    <fullName>Formato_de_comissionamento__c</fullName>
    <label>Formato de comissionamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>