force-app/main/default/objects/Account/fields/Frota_Concorrentes__c.field-meta.xml
<CustomField>
    <fullName>Frota_Concorrentes__c</fullName>
    <formula>Frota_total_Concorrente_Potencial__c / Tamanho_da_Frota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Frota Concorrentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>